--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,14 +1,13 @@
 <div class="container" style="margin-top: 100px;">
 
-  <div class="row">
-    <div class="col-12 mb-5">
+  <div class="row text">
       <h2>Wir schreiben das Jahr 1940</h2>
       <hr>
       <p>
-        Der Zweite Weltkrieg hat gerade erst begonnen, und so beginnt sich auch der Schrecken des Krieges in jede Ecke
+        Der Zweite Weltkrieg hat gerade erst begonnen und so beginnt sich auch der Schrecken des Krieges in jede Ecke
         zu erstrecken.
         Der Schaden, der in den nächsten 5 Jahren angerichtet wird, ist noch nicht vorstellbar.
-        Scheinbar die ganze Welt liegt sich in den Haaren.
+        Scheinbar liegt sich die ganze Welt in den Haaren.
       </p>
       <p>
         Inmitten dieser kämpfenden Grossmächte Europas sitzt die kleine Schweiz.
@@ -17,64 +16,56 @@
         das Leben wenigstens noch erschweren zu können.
       </p>
       <p>
-        Als Teil unserer IDPA Arbeit an der BBBaden in 2018-19 erarbeiteten wir einen Einblick in die Personen,
-        Strategien und Bunker mittels Operationsbefehlen, Internet und Besuchen, welche wir Ihnen auf dieser
-        Seite präsentieren möchten.
+        Als Teil unserer IDPA an der BBBaden von 2019 erarbeiteten wir mittels Operationsbefehlen, Internet und Besuchen 
+        eine Webseite über die Personen, Strategien und Bunker des Zweiten Weltkrieges aus Schweizer Sicht.
       </p>
-    </div>
   </div>
 
-  <div class="row">
-    <div class="col-md-4 mb-5">
-      <div class="card h-100">
-        <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-        <div class="card-body">
-          <h4 class="card-title">Wieso gab es diese Bunker?</h4>
-          <p class="card-text">
-            Die Schweiz war im Zweiten Weltkrieg in der glücklichen Lage, von keinem feindlichen Lang eingenommen zu
-            werden, jedoch war die Angst vor einem Angriff konstant vorhanden und rief mit der Zeit nach
-            Vorkehraktionen.
-            So gab Henri Guisan zum Start des Zweiten Weltkrieges die ersten Befehle, Bunker in der Schweiz zu
-            errichten, von denen aus das
-            Militär die Feinde so lange, wie möglich zurückhalten könnte.
-          </p>
-        </div>
+  <div class="row cardparent">
+    <div class="card">
+      <img class="card-img-top" src="/assets/person/guisan.jpg" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Wieso gab es diese Bunker?</h3>
+        <p class="card-text">
+          Die Schweiz war im Zweiten Weltkrieg in der glücklichen Lage, von keinem feindlichen Land eingenommen worden zu
+          sein, jedoch war die Angst vor einem Angriff konstant vorhanden und rief mit der Zeit nach
+          baulichen Vorkehrungen, um sich vor dem Gegner schützen zu können, auf.
+          So gab Henri Guisan zum Start des Zweiten Weltkrieges die ersten Befehle, Bunker in der Schweiz zu
+          errichten, von denen aus das
+          Militär die Feinde so lange wie möglich zurückhalten könnte.
+        </p>
         <div class="card-footer">
-          <a routerLink="/personen" class="btn btn-primary">Wer war Henri Guisan?</a>
+          <a routerLink="/personen" class="btn">Wer war Henri Guisan?</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4 mb-5">
-      <div class="card h-100">
-        <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-        <div class="card-body">
-          <h4 class="card-title">Wo gab es diese Bunker?</h4>
-          <p class="card-text">
-            Die meisten Bunker waren in die Berge konzentiert, die erhöhte Lage bietete einen strategischen Vorteil.
-            Es wurden Linien entlang der Grenzen zu Italien, Frankreich, Deutschland und Österreich gebildet.
-            Dutzende Bunker, exquisit in dem Gesteine der Felsen verstecke, waren entland dieser Linien verteilt, einzig
-            erkennbar durch kaum entdeckbare und gut getarnte Löcher im Felsen, aus denen gesehen und geschossen wurde.
-          </p>
-        </div>
+    <div class="card">
+      <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Wo gab es diese Bunker?</h3>
+        <p class="card-text">
+          Die meisten Bunker waren in die Berge konzentriert, die erhöhte Lage bot einen strategischen Vorteil. 
+          Es wurden Linien entlang der Grenzen zu Italien, Frankreich, Deutschland und Österreich gebildet. 
+          Dutzende Bunker, exquisit in dem Gesteine der Felsen verstecke, waren entlang dieser Linien verteilt, 
+          einzig erkennbar durch kaum entdeckbare und gut getarnte Löcher im Felsen, aus denen gesehen und geschossen wurde.
+        </p>
         <div class="card-footer">
-          <a routerLink="/festung-vitznau" class="btn btn-primary">Zur Karte der Bunker</a>
+          <a routerLink="/festung-vitznau" class="btn">Zur Karte der Bunker</a>
         </div>
       </div>
     </div>
-    <div class="col-md-4 mb-5">
-      <div class="card h-100">
-        <img class="card-img-top" src="http://placehold.it/300x200" alt="">
-        <div class="card-body">
-          <h4 class="card-title">Wie steht es mit den Bunkern heute?</h4>
-          <p class="card-text">
-            Nach dem Ende des Zweiten Weltkrieges wurden einige Bunker stillgelegt, andere wurden zu Museen, Hotels
-            oder ähnlichem umegrüstet.
-            Mit unserer IDPA Gruppe besuchten wir eine dieser Bunker-Museen, die Festung Vitznau im Kanton Luzern.
-            Unsere Eindrücke und Bilder dieses Besuches präsentieren wir ebenfalls auf dieser Seite.
-          </p>
-        </div>
+    <div class="card">
+      <img class="card-img-top" src="/assets/fortress/Fotos_Vitznau_065.jpg" alt="">
+      <div class="card-body">
+        <h3 class="card-title">Wie steht es heute um die Bunkern?</h3>
+        <p class="card-text">
+          Nach dem Ende des Zweiten Weltkrieges wurden einige Bunker stillgelegt, andere wurden zu Museen, Hotels
+          oder ähnlichem umgerüstet.
+          Mit unserer IDPA Gruppe besuchten wir eine dieser Bunker-Museen, die Festung Vitznau im Kanton Luzern.
+          Unsere Eindrücke und Bilder dieses Besuches präsentieren wir ebenfalls auf dieser Seite.
+        </p>
         <div class="card-footer">
-          <a routerLink="/festung-vitznau" class="btn btn-primary">Mehr über Vitznau</a>
+          <a routerLink="/festung-vitznau" class="btn">Mehr über Vitznau</a>
         </div>
       </div>
     </div>
