--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,14 @@ h1 {
     font-size: 2.3em
 }
 
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.4rem;
+}
+
 h2, h3, h4 {
     font-family: 'Playfair Display';
 }
