--- a/src/app/views/person/person-overview/person-overview.component.scss
+++ b/src/app/views/person/person-overview/person-overview.component.scss
@@ -43,9 +43,10 @@ div.person-overview_wrapper {
       div.person-fact-sheet {
         width: 100%;
         height: 100%;
-        padding: 30px; 
+        padding: 0px 30px; 
 
         h1 {
+          font-size: 1.8em;
           text-align: center;
           padding-bottom: 20px;
         }
