add map with fortresses

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -11,7 +11,7 @@
       <img src="assets/menu-icons/military-fortress.png" alt="" />
       Festung Vitznau
     </a>
-    <a class="menu_item" routerLink="/festung-vitznau">
+    <a class="menu_item" routerLink="/karte/festungen">
       <img src="assets/menu-icons/map.png" alt="" />
       interaktive Karte
     </a>
