landing-page: Add image for fortresses-map, fix link

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div class="card">
-      <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+      <img class="card-img-top" src="/assets/map/fortresses-map-screenshot.png" alt="">
       <div class="card-body">
         <h3 class="card-title">Wo gab es diese Bunker?</h3>
         <p class="card-text">
@@ -50,7 +50,7 @@
           einzig erkennbar durch kaum entdeckbare und gut getarnte Löcher im Felsen, aus denen gesehen und geschossen wurde.
         </p>
         <div class="card-footer">
-          <a routerLink="/festung-vitznau" class="btn">Zur Karte der Bunker</a>
+          <a routerLink="/karte/festungen" class="btn">Zur Karte der Bunker</a>
         </div>
       </div>
     </div>
