Change guisan-image due to copyright-reasons

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -23,7 +23,7 @@
 
   <div class="row cardparent">
     <div class="card">
-      <img class="card-img-top" src="/assets/person/guisan.jpg" alt="">
+      <img class="card-img-top" src="/assets/person/guisan_landingpage.jpg" alt="">
       <div class="card-body">
         <h3 class="card-title">Wieso gab es diese Bunker?</h3>
         <p class="card-text">
